# rag_agent

./: .flake8  .gitignore  .pre-commit-config.yaml  DEVELOPMENT_RULES.md  Makefile  README.md  env.example  pyproject.toml  requirements.txt  smart_chunker_config.json  test_smart_chunker.py
.github/workflows/: ci.yml
docs/: DEVELOPMENT.md
notebooks/: exploration.ipynb
scripts/: check_code_quality.py  deploy.py  setup_dev_environment.py  setup_env.py
src/: __init__.py  cli.py  main.py
src/config/: __init__.py  settings.py
src/core/: __init__.py  document_processor.py  rag_engine.py
src/modules/: __init__.py
src/modules/llm/: __init__.py  llm_client.py
src/modules/nlp/: __init__.py  embedder.py
src/modules/parser/: smart_chunker_adapter.py
src/utils/: file_utils.py  logging_utils.py  vector_store.py
tests/: __init__.py  test_document_processor.py  test_rag_engine.py
